--- a/estilos.css
+++ b/estilos.css
@@ -201,10 +201,7 @@ align-content: center;
 
 .galeria {
     width: 100%;
-    height: 500px;
-	position: center;
-	aling-content:center;
-   
+    height: 100%;
 }
 
 .imagenes {
