--- a/estilos.css
+++ b/estilos.css
@@ -200,9 +200,12 @@ align-content: center;
 }
 
 .galeria {
-    width: 100%;
+
     height: 500px;
-	
+	width: 20%;
+    height: 500px;
+    overflow: hidden;
+    position: relative;
 	
 	
 }
