--- a/estilos.css
+++ b/estilos.css
@@ -203,9 +203,11 @@ align-content: center;
 
     height: 500px;
 	width: 20%;
-    height: 500px;
-    overflow: hidden;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
     position: relative;
+    overflow: hidden;
 	
 	
 }
